--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,6 @@
+/* Importar la fuente Space Mono */
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+
 :root {
   --bg: #ffffff;
   --fg: #000000;
